Fix dropdown spacing issue

--- a/src/components/SearchFilters/Dropdown.module.scss
+++ b/src/components/SearchFilters/Dropdown.module.scss
@@ -13,4 +13,5 @@
     box-shadow: vars.$eff-shadow-primary;
     padding: vars.$spc-10 vars.$spc-15;
     z-index: 1;
+    box-sizing: content-box;
 }
